--- a/hello.html
+++ b/hello.html
@@ -6,8 +6,9 @@
         </title>
     </head>
     <body>
-        <h1 style="color:blue;">
-            welcome to my website!
+        <h1>
+            welcome to my website!!
+            this is it
         </h1>
         <h2> Hello!<h2>
         Hello, World!
